2010-09-04  Markus Gutschke  <markus@shellinabox.com>

	* Added an optional on-screen keyboard. Must be activated by the
	user by selecting the option in the context-menu.

2010-09-03  Markus Gutschke  <markus@shellinabox.com>

	* Fix some scaling related issues. This fix is thanks to some
	excellent detective work by Jan <siev...@zedat.fu-berlin.de>.

	* Allow changing of font sizes in the user CSS.

2010-08-19  Markus Gutschke  <markus@shellinabox.com>

	* Thanks to lotr44's excellent analysis of the problem, we now have
	a fix for the problem with typing "!" on French keyboards.

2010-08-06  Markus Gutschke  <markus@shellinabox.com>

	* Allow users to disable the blinking cursor from the context menu.

2010-07-08  Markus Gutschke  <markus@shellinabox.com>

	* Added support for systems that have utmpx.h, but don't implement
	updwtmpx().

2010-07-02  Markus Gutschke  <markus@shellinabox.com>

	* Fixed a NULL pointer dereference that can occur when hostnames
	do not resolve. Thanks to <vmagerya> for pointing out this problem.

2010-03-31  Markus Gutschke  <markus@shellinabox.com>

	* Tweaked the build system to work better on OpenWRT. This is largely
	thanks to very helpful bug reports, and lots of testing by Jan Jaeger.

2010-03-29  Markus Gutschke  <markus@shellinabox.com>

	* Started working on support for WebSockets.

	* Fixed some compiler warnings when compiling with -Wextra

	* Thanks to Jan Jaeger's excellent bug report, made some changes
	that should make it easier to build ShellInABox for OpenWRT.

2009-12-10  Markus Gutschke  <markus@shellinabox.com>

	* Add .note.GNU-stack to all object files so that the generated
	binary doesn't erroneously request an executable stack.

2009-12-03  Markus Gutschke  <markus@shellinabox.com>

	* Allow retrieval of the user's default login shell from
	/etc/passwd.

	* Allow the code to be built without support for the LOGIN
	service, as calling /bin/login does not work well on Fedora.
